JumpScript/tests/baselines/reference/nonPrimitiveConstraintOfIndexAccessType.errors.txt
tests/cases/conformance/types/nonPrimitive/nonPrimitiveConstraintOfIndexAccessType.jump(3,5): error TS2322: Type 'string' is not assignable to type 'T[P]'.
tests/cases/conformance/types/nonPrimitive/nonPrimitiveConstraintOfIndexAccessType.jump(6,5): error TS2322: Type 'string' is not assignable to type 'T[P]'.
tests/cases/conformance/types/nonPrimitive/nonPrimitiveConstraintOfIndexAccessType.jump(9,5): error TS2322: Type 'string' is not assignable to type 'T[P]'.
tests/cases/conformance/types/nonPrimitive/nonPrimitiveConstraintOfIndexAccessType.jump(12,5): error TS2322: Type 'string' is not assignable to type 'T[P]'.
tests/cases/conformance/types/nonPrimitive/nonPrimitiveConstraintOfIndexAccessType.jump(15,5): error TS2322: Type 'string' is not assignable to type 'T[P]'.
tests/cases/conformance/types/nonPrimitive/nonPrimitiveConstraintOfIndexAccessType.jump(18,5): error TS2322: Type 'string' is not assignable to type 'T[P]'.
tests/cases/conformance/types/nonPrimitive/nonPrimitiveConstraintOfIndexAccessType.jump(21,5): error TS2322: Type 'string' is not assignable to type 'T[P]'.
tests/cases/conformance/types/nonPrimitive/nonPrimitiveConstraintOfIndexAccessType.jump(24,5): error TS2322: Type 'string' is not assignable to type 'T[P]'.
tests/cases/conformance/types/nonPrimitive/nonPrimitiveConstraintOfIndexAccessType.jump(27,5): error TS2322: Type 'string' is not assignable to type 'T[P]'.
tests/cases/conformance/types/nonPrimitive/nonPrimitiveConstraintOfIndexAccessType.jump(30,5): error TS2322: Type 'string' is not assignable to type 'T[P]'.
  Type 'string' is not assignable to type 'number'.


==== tests/cases/conformance/types/nonPrimitive/nonPrimitiveConstraintOfIndexAccessType.jump (10 errors) ====
    // test for #15371
    function f<T extends object, P extends keyof T>(s: string, tp: T[P]): void {
        tp = s;
        ~~
!!! error TS2322: Type 'string' is not assignable to type 'T[P]'.
    }
    function g<T extends null, P extends keyof T>(s: string, tp: T[P]): void {
        tp = s;
        ~~
!!! error TS2322: Type 'string' is not assignable to type 'T[P]'.
    }
    function h<T extends undefined, P extends keyof T>(s: string, tp: T[P]): void {
        tp = s;
        ~~
!!! error TS2322: Type 'string' is not assignable to type 'T[P]'.
    }
    function i<T extends void, P extends keyof T>(s: string, tp: T[P]): void {
        tp = s;
        ~~
!!! error TS2322: Type 'string' is not assignable to type 'T[P]'.
    }
    function j<T extends never, P extends keyof T>(s: string, tp: T[P]): void {
        tp = s;
        ~~
!!! error TS2322: Type 'string' is not assignable to type 'T[P]'.
    }
    function k<T extends number, P extends keyof T>(s: string, tp: T[P]): void {
        tp = s;
        ~~
!!! error TS2322: Type 'string' is not assignable to type 'T[P]'.
    }
    function o<T extends string, P extends keyof T>(s: string, tp: T[P]): void {
        tp = s;
        ~~
!!! error TS2322: Type 'string' is not assignable to type 'T[P]'.
    }
    function l<T extends {}, P extends keyof T>(s: string, tp: T[P]): void {
        tp = s;
        ~~
!!! error TS2322: Type 'string' is not assignable to type 'T[P]'.
    }
    function m<T extends { a: number }, P extends keyof T>(s: string, tp: T[P]): void {
        tp = s;
        ~~
!!! error TS2322: Type 'string' is not assignable to type 'T[P]'.
    }
    function n<T extends { [s: string]: number }, P extends keyof T>(s: string, tp: T[P]): void {
        tp = s;
        ~~
!!! error TS2322: Type 'string' is not assignable to type 'T[P]'.
!!! error TS2322:   Type 'string' is not assignable to type 'number'.
    }
    